# If the installation of man pages bugs you (e.g. you're a package builder)
# You may want to disable it
# AUTOMAKE_OPTIONS="no-installman"
man_MANS = lavplay.1  lavrec.1  mjpegtools.1  mpeg2enc.1  mplex.1 \
	yuvplay.1 lav2wav.1 lav2yuv.1 lavtrans.1 mp2enc.1 xlav.1 \
	yuvscaler.1 lavpipe.1 yuv2lav.1

EXTRA_DIST = $(man_MANS)
