#
# Automake Makefile template for mpeg2enc++ library 
# and mpeg2enc command line wrapper.
#


bin_PROGRAMS = mpeg2enc 

mpeg2encpp_MMXSSE_ASM = \
    fdct_mmx.s fdctdata.c idct_mmx.s idctdata.c \
    quant_mmx.s predict_mmx.s \
    predcomp_mmxe.s predcomp_mmx.s 

mpeg2encpp_MMXSSE_INLINE = transfrm_x86.c quantize_x86.c predict_x86.c


EXTRA_DIST = NOTES .cvsignore


MAINTAINERCLEANFILES = Makefile.in

INCLUDES = -I $(top_srcdir) -I $(top_srcdir)/utils

lib_LTLIBRARIES = libmpeg2encpp.la


if HAVE_ASM_MMX
if HAVE_ASM_NASM

noinst_LIBRARIES = libmmxsseasm.a
libmmxsseasm_a_SOURCES = $(mpeg2encpp_MMXSSE_ASM)
SIMD_INLINE = $(mpeg2encpp_MMXSSE_INLINE)
LIBSIMDASM_LIB = libmmxsseasm.a

else
LIBSIMDASM_LIB = 
SIMD_INLINE = 
endif
else
LIBSIMDASM_LIB = 
SIMD_INLINE = 
endif


# Reference implementations of lowlevel routines that may have Architecture
# dependent (usually SIMD) implementations

mpeg2enc_REF = quantize_ref.c  quantize_ref.h transfrm_ref.c transfrm_ref.h \
			fdctref.c idct.c predict_ref.c predict_ref.h

mpeg2enc_SOURCES = mpeg2enc.cc 

libmpeg2encpp_la_SOURCES = mpeg2encparams.h \
	mpeg2encoptions.hh mpeg2encoptions.cc \
	mpeg2encoder.hh mpeg2encoder.cc \
	encoderparams.h encoderparams.cc conform.cc \
    seqencoder.hh putseq.cc \
	picture.hh picture.cc putpic.cc \
	macroblock.hh macroblock.cc  \
	mpeg2coder.hh mpeg2coder.cc tables.h tables.c  \
	elemstrmwriter.hh elemstrmwriter.cc \
	motionest.cc \
	predict.hh predict.cc \
	transfrm.hh transfrm.cc \
	quantize.hh quantize.cc \
	ratectl.hh ratectl.cc stats.cc writepic.cc  synchrolib.cc \
	picturereader.cc \
	mpeg2enc.h \
	simd.h synchrolib.h $(mpeg2enc_REF) $(SIMD_INLINE)

libmpeg2encpp_la_LDFLAGS = \
	-version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
	-release $(LT_RELEASE) \
	-export-dynamic 

libmpeg2encpp_la_DEPENDENCIES = $(top_builddir)/utils/libmotion.a \
								$(LIBSIMDASM_LIB)

libmpeg2encpp_la_LIBADD = $(top_builddir)/utils/libmotion.a \
						  $(LIBSIMDASM_LIB)

mpeg2enc_DEPENDENCIES = libmpeg2encpp.la \
	                    $(top_builddir)/utils/libmjpegutils.a \
			            $(top_builddir)/utils/libmotion.a

mpeg2enc_LDADD= libmpeg2encpp.la \
				$(top_builddir)/utils/libmjpegutils.a \
		        @PTHREAD_LIBS@ @LIBGETOPT_LIB@ $(LIBM_LIBS)


# VITAL: Override default compilation rules generated by automake...
# It shoves in a -c flag that nasm barfs on...

%.o: %.s ; 	$(AS) $(ASFLAGS) -o $@ $<


# Comment....
